# particlelife_bevy

./: Cargo.toml
src/: config.rs  main.rs  palette.rs  snapshot.rs  ui.rs
src/physics/: bodies.rs  forces.rs  islands.rs  mod.rs  physics.rs  plugin.rs
src/providers/: mod.rs  positioners.rs
