[package]
name = "particlelife_bevy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.6.1"
bevy = "0.17.3"
bevy_egui = "0.38.1"
bevy_pancam = { version = "0.19.0", features = ["bevy_egui"] }
glam = "0.30.9"
rand = "0.9.2"
rayon = "1.11.0"
strum = { version = "0.27.2", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
