[package]
name = "particlelife_bevy"
version = "0.2.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
bevy = { version = "0.17.3", default-features = false, features = [
    "bevy_dev_tools",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_ui_render",
    "bevy_winit",
    "default_font",
]}
bevy_egui = { version = "0.38.1", default-features = false, features = [
    "bevy_ui",
    "default_fonts",
    "render"
] }
bevy_pancam = { version = "0.19.0", features = ["bevy_egui"] }
glam = "0.30.10"
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
rayon = "1.11.0"
strum = { version = "0.27.2", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
